yaml/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: shopping
  type: NodePort
