yaml/managed-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-lb"
    networking.gke.io/managed-certificates: managed-cert
    cloud.google.com/backend-config: '{"default": "gogle-backendconfig"}'
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: nodeport        # 앞서 만들어준 NodePort 서비스의 이름 적어주기
      port:
        number: 8080
